--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>%REACT_APP_URL%</title>
+    <title>PX2GC - Convert Sprites to GCode</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
